force-app/main/default/objects/Activity__c/Activity__c.object-meta.xml
<CustomObject>
    <label>カスタム活動</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>NO</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>