force-app/main/default/objects/Activity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>企業</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>活動</relationshipLabel>
    <relationshipName>AccountActivity</relationshipName>
    <type>Lookup</type>
</CustomField>