force-app/main/default/objects/Activity__c/fields/AccountNameCheck__c.field-meta.xml
<CustomField>
    <fullName>AccountNameCheck__c</fullName>
    <formula>ISBLANK( Account__c )</formula>
    <label>仮入力状態(企業名)</label>
    <type>Checkbox</type>
</CustomField>