force-app/main/default/objects/Activity__c/fields/AccountNameDB__c.field-meta.xml
<CustomField>
    <fullName>AccountNameDB__c</fullName>
    <formula>IF ( ISBLANK(  Account__c  ) ,  AccountText__c  ,  Account__r.Name )</formula>
    <label>企業名(DB用)</label>
    <type>Text</type>
</CustomField>