force-app/main/default/objects/Activity__c/fields/AccountNameForSearch__c.field-meta.xml
<CustomField>
    <fullName>AccountNameForSearch__c</fullName>
    <label>企業名(検索用)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>