force-app/main/default/objects/Activity__c/fields/ActivityDateDB__c.field-meta.xml
<CustomField>
    <fullName>ActivityDateDB__c</fullName>
    <description>データベース営業部用の活動日。</description>
    <label>活動日(DB営業用)</label>
    <type>Date</type>
</CustomField>