force-app/main/default/objects/Activity__c/fields/Contact3__c.field-meta.xml
<CustomField>
    <fullName>Contact3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>企業担当者3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Activity_Contact3</relationshipName>
    <type>Lookup</type>
</CustomField>