force-app/main/default/objects/Activity__c/fields/ContactNameDB__c.field-meta.xml
<CustomField>
    <fullName>ContactNameDB__c</fullName>
    <formula>IF ( ISBLANK(  Contact__c ) ,  ContactText__c  ,  Contact__r.LastName  &amp;&quot; &quot;&amp;  Contact__r.FirstName  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>企業担当者名(DB用)</label>
    <type>Text</type>
</CustomField>