force-app/main/default/objects/Activity__c/fields/ContactText__c.field-meta.xml
<CustomField>
    <fullName>ContactText__c</fullName>
    <label>企業担当者(直接入力)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>