force-app/main/default/objects/Activity__c/fields/DetailsDB__c.field-meta.xml
<CustomField>
    <fullName>DetailsDB__c</fullName>
    <label>内容</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>