force-app/main/default/objects/Activity__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>手段</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>訪問</fullName>
            </value>
            <value>
                <fullName>来社</fullName>
            </value>
            <value>
                <fullName>電話</fullName>
            </value>
            <value>
                <fullName>メール</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>