force-app/main/default/objects/Activity__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>案件</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>活動</relationshipLabel>
    <relationshipName>ProjectActivity</relationshipName>
    <type>Lookup</type>
</CustomField>