force-app/main/default/objects/Activity__c/fields/VendorOrAgencyDB__c.field-meta.xml
<CustomField>
    <fullName>VendorOrAgencyDB__c</fullName>
    <label>ベンダ・代理店</label>
    <length>30</length>
    <type>Text</type>
</CustomField>