force-app/main/default/objects/Activity__c/fields/VisitPurpose__c.field-meta.xml
<CustomField>
    <fullName>VisitPurpose__c</fullName>
    <label>訪問目的</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>挨拶</fullName>
            </value>
            <value>
                <fullName>提案</fullName>
            </value>
            <value>
                <fullName>契約</fullName>
            </value>
            <value>
                <fullName>対応</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>