force-app/main/default/objects/Activity__c/listViews/ALL_Task.listView-meta.xml
<ListView>
    <fullName>ALL_Task</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>全ての活動</label>
</ListView>