force-app/main/default/objects/Activity__c/listViews/MyProjectListAd.listView-meta.xml
<ListView>
    <fullName>MyProjectListAd</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Method__c</columns>
    <columns>Project__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Activity__c.DBSalesRecordType</value>
    </filters>
    <label>すべて選択(広告用)</label>
    <sharedTo>
        <role>BusinessPromotionDeptRole</role>
    </sharedTo>
</ListView>